//============================================================================//
//                                                                            //
//                         Copyright Â© 2015 Sandpolis                         //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation.                                   //
//                                                                            //
//============================================================================//
syntax = "proto3";

package core.foundation.soi;

option java_package = "com.sandpolis.core.foundation.soi";

/**
 * The SO_Build object contains information about the build process.
 */
message SO_Build {

    // The version string
    string version = 1;

    // The build time
    int64 time = 3;

    // Whether this build is a development build
    bool development = 4;

    // The build platform's name
    string platform = 5;

    // The build platform's Java version
    string java_version = 6;

    // The build platform's Gradle version
    string gradle_version = 7;
}
